--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "d0b8d8bdf2160db6",
+        "id": "accfbc0558142ea5",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/Binary Tree/views question/left_view.md",
-            "mode": "preview"
+            "file": "DSA_imp/matrix_imp/shift_2d_grid.md",
+            "mode": "source"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/Binary Tree/views question/left_view.md",
+                "file": "DSA_imp/matrix_imp/shift_2d_grid.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "d0b8d8bdf2160db6",
+  "active": "accfbc0558142ea5",
   "lastOpenFiles": [
+    "DSA_imp/matrix_imp/shift_2d_grid.md",
+    "DSA_imp/Binary Tree/k sum paths.md",
+    "DSA_imp/Binary Tree/Drawing 2022-04-12 01.01.24.excalidraw.md",
+    "DSA_imp/Binary Tree/img/k_sum_path_approach.png",
+    "DSA_imp/Binary Tree/Morris_Traversal.md",
+    "DSA_imp/Binary Tree/lowest common ancestor.md",
     "DSA_imp/Binary Tree/views question/left_view.md",
     "DSA_imp/Binary Tree/views question/right_view.md",
     "DSA_imp/Binary Tree/img/right_view_approach.png",
-    "Pasted Image 20220411013748_828.png",
-    "DSA_imp/Binary Tree/views question/Drawing 2022-04-11 01.37.38.excalidraw.md",
-    "DSA_imp/Binary Tree/views question/top_view.md",
-    "DSA_imp/Binary Tree/views question/bottom_view.md",
-    "DSA_imp/Binary Tree/img/left_view_approach.png",
-    "Pasted Image 20220411012732_328.png",
-    "DSA_imp/Binary Tree/views question/Drawing 2022-04-11 01.27.22.excalidraw.md"
+    "Pasted Image 20220411013748_828.png"
   ]
 }
