--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "696049f5468f35ec",
+        "id": "20bc7d11b4cbbd9a",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/Binary Tree/kth_ancesstor_in_tree.md",
+            "file": "JavaScript/freecodecamp/Basic Javascript/objects.md",
             "mode": "preview"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/Binary Tree/kth_ancesstor_in_tree.md",
+                "file": "JavaScript/freecodecamp/Basic Javascript/objects.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "696049f5468f35ec",
+  "active": "20bc7d11b4cbbd9a",
   "lastOpenFiles": [
-    "DSA_imp/Binary Tree/kth_ancesstor_in_tree.md",
-    "DSA_imp/Binary Tree/img/kth_ancesstor_ex1.png",
-    "DSA_imp/matrix_imp/spiral matrix II.md",
-    "DSA_imp/matrix_imp/shift_2d_grid.md",
-    "DSA_imp/matrix_imp/Drawing 2022-04-14 16.35.32.excalidraw.md",
-    "DSA_imp/matrix_imp/img/spiral_matrix_II approach.png",
-    "DSA_imp/matrix_imp/img/spiral_matrix_II_example.png",
-    "DSA_imp/strings_algorithm/Z_algorithm_pattern_searching.md",
-    "DSA_imp/strings_algorithm/KMP_string_matching_algorithm.md",
-    "DSA_imp/Binary Tree/k sum paths.md"
+    "JavaScript/freecodecamp/Basic Javascript/objects.md",
+    "JavaScript/freecodecamp/Basic Javascript/arrays.md",
+    "DSA_imp/Binary Tree/flatten_tree_into_linkedlist.md",
+    "DSA_imp/Binary Tree/Drawing 2022-04-15 16.52.43.excalidraw.md",
+    "DSA_imp/Binary Tree/zig_zag_traversal.md",
+    "DSA_imp/Binary Tree/Vertical level order Traversal.md",
+    "DSA_imp/Binary Tree/Sum of binary tree.md",
+    "DSA_imp/Binary Tree/Morris_Traversal.md",
+    "DSA_imp/Binary Tree/maximum_sum_of_non_adjacent_nodes.md",
+    "DSA_imp/Binary Tree/img/maximum sum of adjacent nodes approach.png"
   ]
 }
