--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "20bc7d11b4cbbd9a",
+        "id": "b8a2547033ee6ecd",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "JavaScript/freecodecamp/Basic Javascript/objects.md",
-            "mode": "preview"
+            "file": "JavaScript/freecodecamp/Basic Javascript/Arrow functions.md",
+            "mode": "source"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "JavaScript/freecodecamp/Basic Javascript/objects.md",
+                "file": "JavaScript/freecodecamp/Basic Javascript/Arrow functions.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "20bc7d11b4cbbd9a",
+  "active": "b8a2547033ee6ecd",
   "lastOpenFiles": [
+    "JavaScript/freecodecamp/Basic Javascript/Arrow functions.md",
     "JavaScript/freecodecamp/Basic Javascript/objects.md",
-    "JavaScript/freecodecamp/Basic Javascript/arrays.md",
-    "DSA_imp/Binary Tree/flatten_tree_into_linkedlist.md",
-    "DSA_imp/Binary Tree/Drawing 2022-04-15 16.52.43.excalidraw.md",
     "DSA_imp/Binary Tree/zig_zag_traversal.md",
     "DSA_imp/Binary Tree/Vertical level order Traversal.md",
     "DSA_imp/Binary Tree/Sum of binary tree.md",
     "DSA_imp/Binary Tree/Morris_Traversal.md",
     "DSA_imp/Binary Tree/maximum_sum_of_non_adjacent_nodes.md",
-    "DSA_imp/Binary Tree/img/maximum sum of adjacent nodes approach.png"
+    "DSA_imp/Binary Tree/Maximum Width of tree.md",
+    "DSA_imp/Binary Tree/lowest common ancestor.md",
+    "DSA_imp/Binary Tree/kth_ancesstor_in_tree.md"
   ]
 }
