--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "b8a2547033ee6ecd",
+        "id": "d1f4b896ba47c421",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "JavaScript/freecodecamp/Basic Javascript/Arrow functions.md",
-            "mode": "source"
+            "file": "DSA_imp/Binary Search Tree/increasing order bst.md",
+            "mode": "preview"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "JavaScript/freecodecamp/Basic Javascript/Arrow functions.md",
+                "file": "DSA_imp/Binary Search Tree/increasing order bst.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "b8a2547033ee6ecd",
+  "active": "d1f4b896ba47c421",
   "lastOpenFiles": [
+    "DSA_imp/Binary Search Tree/increasing order bst.md",
+    "DSA_imp/Binary Search Tree/img/increasing order bst ex2.png",
+    "DSA_imp/Binary Search Tree/img/increasing_order_bst_ex1.png",
+    "DSA_imp/Binary Tree/construct_tree_from_inorder_preorder.md",
+    "DSA_imp/Binary Search Tree/increasing_order_bst.md",
+    "DSA_imp/Binary Search Tree/img/increasing_order_bst_exp1.png",
+    "DSA_imp/Binary Search Tree/img/increasing_order_bst_exp2.png",
     "JavaScript/freecodecamp/Basic Javascript/Arrow functions.md",
     "JavaScript/freecodecamp/Basic Javascript/objects.md",
-    "DSA_imp/Binary Tree/zig_zag_traversal.md",
-    "DSA_imp/Binary Tree/Vertical level order Traversal.md",
-    "DSA_imp/Binary Tree/Sum of binary tree.md",
-    "DSA_imp/Binary Tree/Morris_Traversal.md",
-    "DSA_imp/Binary Tree/maximum_sum_of_non_adjacent_nodes.md",
-    "DSA_imp/Binary Tree/Maximum Width of tree.md",
-    "DSA_imp/Binary Tree/lowest common ancestor.md",
-    "DSA_imp/Binary Tree/kth_ancesstor_in_tree.md"
+    "DSA_imp/Binary Tree/zig_zag_traversal.md"
   ]
 }
