--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/strings_algorithm/Z_algorithm_pattern_searching.md",
+            "file": "DSA_imp/matrix_imp/shift_2d_grid.md",
             "mode": "preview"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/strings_algorithm/Z_algorithm_pattern_searching.md",
+                "file": "DSA_imp/matrix_imp/shift_2d_grid.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "7b610c00defbaa02",
   "lastOpenFiles": [
+    "DSA_imp/matrix_imp/shift_2d_grid.md",
+    "DSA_imp/matrix_imp/img/shif_2d_grid_ex1.png",
+    "DSA_imp/matrix_imp/img/spiral_matrix_II_example.png",
+    "DSA_imp/matrix_imp/img/shif_2d_grid_ex2.png",
+    "DSA_imp/matrix_imp/spiral matrix II.md",
     "DSA_imp/strings_algorithm/Z_algorithm_pattern_searching.md",
     "DSA_imp/strings_algorithm/Drawing 2022-04-22 18.51.59.excalidraw.md",
     "DSA_imp/strings_algorithm/img/z algo approach.png",
     "GIT_NOTES.md",
-    "DSA_imp/strings_algorithm/KMP_string_matching_algorithm.md",
-    "z alg approach.png",
-    "programming/programming Notes/condition_help.md",
-    "programming/programming Notes/C++ Tips.md",
-    "programming/programming Notes/C++ Notes/bitwise_operator.md",
-    "programming/programming Notes/C++ Notes/2. Graduating to C++.md"
+    "DSA_imp/strings_algorithm/KMP_string_matching_algorithm.md"
   ]
 }
