--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "7b610c00defbaa02",
+        "id": "4033ba354cd83822",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/matrix_imp/shift_2d_grid.md",
+            "file": "DSA_imp/arrays/3Sum with multiplicity.md",
             "mode": "preview"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/matrix_imp/shift_2d_grid.md",
+                "file": "DSA_imp/arrays/3Sum with multiplicity.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "7b610c00defbaa02",
+  "active": "4033ba354cd83822",
   "lastOpenFiles": [
+    "DSA_imp/arrays/3Sum with multiplicity.md",
+    "DSA_imp/arrays/Drawing 2022-04-23 19.55.01.excalidraw.md",
+    "DSA_imp/arrays/img/3sum_multiplicity_ijk_same.png",
+    "Pasted Image 20220424142841_446.png",
+    "DSA_imp/arrays/img/3sum_multiplicity_ij_same.png",
+    "DSA_imp/arrays/Container with most water.md",
+    "DSA_imp/arrays/img/3sum_multiplicity_ss1.png",
     "DSA_imp/matrix_imp/shift_2d_grid.md",
     "DSA_imp/matrix_imp/img/shif_2d_grid_ex1.png",
-    "DSA_imp/matrix_imp/img/spiral_matrix_II_example.png",
-    "DSA_imp/matrix_imp/img/shif_2d_grid_ex2.png",
-    "DSA_imp/matrix_imp/spiral matrix II.md",
-    "DSA_imp/strings_algorithm/Z_algorithm_pattern_searching.md",
-    "DSA_imp/strings_algorithm/Drawing 2022-04-22 18.51.59.excalidraw.md",
-    "DSA_imp/strings_algorithm/img/z algo approach.png",
-    "GIT_NOTES.md",
-    "DSA_imp/strings_algorithm/KMP_string_matching_algorithm.md"
+    "DSA_imp/matrix_imp/img/spiral_matrix_II_example.png"
   ]
 }
