--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/arrays/3Sum with multiplicity.md",
-            "mode": "preview"
+            "file": "DSA_imp/Design/design_underground_system.md",
+            "mode": "source"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/arrays/3Sum with multiplicity.md",
+                "file": "DSA_imp/Design/design_underground_system.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,6 +88,7 @@
   },
   "active": "4033ba354cd83822",
   "lastOpenFiles": [
+    "DSA_imp/Design/design_underground_system.md",
     "DSA_imp/arrays/3Sum with multiplicity.md",
     "DSA_imp/arrays/Drawing 2022-04-23 19.55.01.excalidraw.md",
     "DSA_imp/arrays/img/3sum_multiplicity_ijk_same.png",
@@ -96,7 +97,6 @@
     "DSA_imp/arrays/Container with most water.md",
     "DSA_imp/arrays/img/3sum_multiplicity_ss1.png",
     "DSA_imp/matrix_imp/shift_2d_grid.md",
-    "DSA_imp/matrix_imp/img/shif_2d_grid_ex1.png",
-    "DSA_imp/matrix_imp/img/spiral_matrix_II_example.png"
+    "DSA_imp/matrix_imp/img/shif_2d_grid_ex1.png"
   ]
 }
