--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,14 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "b786db27e9cbcdf1",
+        "id": "f9a6ef644acef8bc",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "DSA_imp/Design/design_underground_system.md",
-            "mode": "source"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/Design/design_underground_system.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +82,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "b786db27e9cbcdf1",
+  "active": "f9a6ef644acef8bc",
   "lastOpenFiles": [
-    "DSA_imp/Design/design_underground_system.md",
-    "DSA_imp/arrays/Container with most water.md",
-    "DSA_imp/arrays/3Sum with multiplicity.md",
-    "GIT_NOTES.md",
-    "Pasted Image 20220426234323_549.png",
-    "DSA_imp/Design/Drawing 2022-04-26 23.43.13.excalidraw.md",
-    "DSA_imp/arrays/Drawing 2022-04-23 19.55.01.excalidraw.md",
-    "DSA_imp/arrays/img/3sum_multiplicity_ijk_same.png",
-    "Pasted Image 20220424142841_446.png",
-    "DSA_imp/arrays/img/3sum_multiplicity_ij_same.png"
+    "ExpressJS/template_engines.md",
+    "ExpressJS/introduction.md",
+    "DSA_imp/Binary Tree/lowest common ancestor.md",
+    "DSA_imp/Binary Tree/kth_ancesstor_in_tree.md",
+    "DSA_imp/Binary Tree/k sum paths.md",
+    "DSA_imp/Binary Tree/flatten_tree_into_linkedlist.md",
+    "DSA_imp/Binary Tree/construct_tree_from_inorder_preorder.md",
+    "DSA_imp/Binary Tree/construct_tree_from_inorder_postorder.md",
+    "DSA_imp/Binary Tree/boundary_traversal.md",
+    "DSA_imp/Binary Tree/binary_tree_balanced.md"
   ]
 }
