--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "f9a6ef644acef8bc",
+        "id": "afc534f85233747e",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/strings_algorithm/Z_algorithm_pattern_searching.md",
+            "file": "DSA_imp/strings/Longest Valid Parentheses.md",
             "mode": "preview"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/strings_algorithm/Z_algorithm_pattern_searching.md",
+                "file": "DSA_imp/strings/Longest Valid Parentheses.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "f9a6ef644acef8bc",
+  "active": "afc534f85233747e",
   "lastOpenFiles": [
+    "DSA_imp/strings/Longest Valid Parentheses.md",
+    "DSA_imp/strings/valid_palindrome_II.cpp.md",
+    "DSA_imp/Binary Search Tree/increasing order bst.md",
+    "DSA_imp/Binary Search Tree/img/increasing_order_bst_ex1.png",
+    "DSA_imp/Binary Search Tree/img/increasing order bst ex2.png",
+    "increasing_order_bst_exp1.png.md",
     "DSA_imp/strings_algorithm/Z_algorithm_pattern_searching.md",
     "DSA_imp/strings_algorithm/KMP_string_matching_algorithm.md",
     "JavaScript/freecodecamp/Basic Javascript/objects.md",
-    "JavaScript/TIPS.md",
-    "ExpressJS/introduction.md",
-    "WEB DEV TRICKS/HTML _CSS TIPS.md",
-    "DSA_imp/Binary Tree/binary_tree_balanced.md",
-    "WEB DEV TRICKS/FONTS.md",
-    "WEB DEV TRICKS/BOOTSTRAP.md",
-    "FONTS.md"
+    "JavaScript/TIPS.md"
   ]
 }
