--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -9,5 +9,11 @@
   "strictLineBreaks": false,
   "alwaysUpdateLinks": true,
   "promptDelete": false,
-  "defaultViewMode": "preview"
+  "defaultViewMode": "preview",
+  "pdfExportSettings": {
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
