--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "28acf4d5dc268c10",
+        "id": "6ce5e189d030e55e",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/Binary Search Tree/largest_BST_in_BT.md",
+            "file": "DSA_imp/LinkedList/delete_node_linkedlist.md",
             "mode": "preview"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/Binary Search Tree/largest_BST_in_BT.md",
+                "file": "DSA_imp/LinkedList/delete_node_linkedlist.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "28acf4d5dc268c10",
+  "active": "6ce5e189d030e55e",
   "lastOpenFiles": [
-    "DSA_imp/Binary Search Tree/largest_BST_in_BT.md",
-    "DSA_imp/Binary Search Tree/img/largest_bst_bt_ex1.png",
-    "DSA_imp/Binary Search Tree/IMPORTANT POINTS FOR BST.md",
+    "DSA_imp/LinkedList/delete_node_linkedlist.md",
+    "DSA_imp/LinkedList/remove_nth_node_from_end.md",
+    "DSA_imp/LinkedList/Drawing 2022-06-04 16.03.38.excalidraw.md",
+    "DSA_imp/LinkedList/reverse_linkedlist.md",
+    "DSA_imp/LinkedList/img/remove_nth_node_end_approach.png",
+    "DSA_imp/LinkedList/img/remove_n_node_ex.png",
+    "DSA_imp/LinkedList/Drawing 2022-06-04 15.29.04.excalidraw.md",
     "DSA_imp/DSA_TIPS_FROM_SEANPRASHAD.md",
-    "DSA_imp/arrays/Drawing 2022-05-27 18.28.39.excalidraw.md",
-    "DSA_imp/arrays/pow_x_n.md",
-    "DSA_imp/arrays/img/pow_x_n_appraoch.png",
-    "DSA_imp/arrays/merge_intervals.md",
-    "DSA_imp/arrays/Moores_Voting_algo.md",
-    "DSA_imp/Heap/Drawing 2022-06-01 15.02.57.excalidraw.md"
+    "DSA_imp/Binary Search Tree/burning _tree.md",
+    "DSA_imp/Binary Tree/img/inorder_postorder_approach.png"
   ]
 }
