--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,11 +4,14 @@
     "type": "split",
     "children": [
       {
-        "id": "fa63691760d0ff71",
+        "id": "0a08954ddfe8b009",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "DSA_imp/Graphs/Cycle Detection/Directed_Detect_Cycle_BFS.md",
+            "mode": "preview"
+          }
         }
       }
     ],
@@ -65,6 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "DSA_imp/Graphs/Cycle Detection/Directed_Detect_Cycle_BFS.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -82,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "fa63691760d0ff71",
+  "active": "0a08954ddfe8b009",
   "lastOpenFiles": [
-    "DSA_imp/Graphs/Drawing 2022-06-23 08.18.49.excalidraw.md",
-    "DSA_imp/Graphs/Cycle Detection/Direct_Detect_Cycle_DFS.md",
-    "DSA_imp/Graphs/img/Directed_Cycle_COurse_schedule_DFS.png",
-    "DSA_imp/Graphs/BFS TRAVERSAL.md",
-    "DSA_imp/Graphs/img/Detect_Cycle_Directed_DFS_app.png",
-    "DSA_imp/Graphs/img/Directed_DFS_why.png",
-    "DSA_imp/Graphs/Drawing 2022-06-22 21.25.49.excalidraw.md",
-    "DSA_imp/Graphs/Drawing 2022-06-22 14.50.54.excalidraw.md",
-    "DSA_imp/Graphs/Cycle Detection/Undirected_Detect_Cycle_BFS.md",
-    "DSA_imp/Graphs/img/undirected_detect_cycle_DFS.png"
+    "DSA_imp/Graphs/Cycle Detection/Directed_Detect_Cycle_BFS.md",
+    "DSA_imp/Graphs/Cycle Detection/Directed_Detect_Cycle_DFS.md",
+    "DSA_imp/Graphs/Topological_Sort_BFS(Kahn's Algo).md",
+    "DSA_imp/Graphs/BFS_Graph_Bipartile.md",
+    "DSA_imp/Graphs/Drawing 2022-06-28 17.52.10.excalidraw.md",
+    "DSA_imp/Graphs/img/graph_bipartile_bfs_app.png",
+    "DSA_imp/Graphs/img/bfs_bipartile_ex2.png",
+    "DSA_imp/Graphs/DFS TRAVERSAL.md",
+    "DSA_imp/Graphs/img/bipartile_ex1.png",
+    "DSA_imp/Graphs/Drawing 2022-06-27 23.51.54.excalidraw.md"
   ]
 }
