--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/Binary Tree/BT_Maximum_path_sum.md",
+            "file": "DSA_imp/Graphs/Topological_sort_DFS.md",
             "mode": "preview"
           }
         }
@@ -52,7 +52,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 326.0121879577637
   },
   "right": {
     "id": "dc81a7f5dc1422e0",
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/Binary Tree/BT_Maximum_path_sum.md",
+                "file": "DSA_imp/Graphs/Topological_sort_DFS.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "053c0a80e39d5657",
   "lastOpenFiles": [
+    "DSA_imp/Graphs/Topological_sort_DFS.md",
+    "DSA_imp/Graphs/Topological_Sort_BFS(Kahn's Algo).md",
+    "DSA_imp/Graphs/Shortest_path_in_undirected_unweight.md",
     "DSA_imp/Binary Tree/BT_Maximum_path_sum.md",
     "DSA_imp/Binary Tree/img/BT_max_path_sum_app_ex.png",
     "DSA_imp/Binary Tree/Drawing 2022-06-30 12.38.24.excalidraw.md",
     "DSA_imp/Binary Tree/img/BT_max_path_sum_approach.png",
     "DSA_imp/Binary Tree/img/max_path_sum_ex2.png",
     "DSA_imp/Binary Tree/img/max_path_sum_ex1.png",
-    "DSA_imp/Binary Tree/k sum paths.md",
-    "DSA_imp/Binary Tree/Sum of binary tree.md",
-    "DSA_imp/Binary Tree/Maximum Width of tree.md",
-    "DSA_imp/Binary Tree/maximum_sum_of_non_adjacent_nodes.md"
+    "DSA_imp/Binary Tree/k sum paths.md"
   ]
 }
