--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,5 @@
 {
-  "baseFontSize": 16,
-  "cssTheme": "Obsidianite"
+  "baseFontSize": 15,
+  "cssTheme": "Obsidianite",
+  "theme": "obsidian"
 }
