--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,14 @@
     "type": "split",
     "children": [
       {
-        "id": "9cb89392eeb75f49",
+        "id": "d1e8efda535f0d25",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/Graphs/Algorithm/Prims_Algorithm.md",
-            "mode": "preview"
+            "file": "DSA_imp/Graphs/Algorithms/Kosaraju_Algo_Strongly_Connected_Component.md",
+            "mode": "preview",
+            "source": false
           }
         }
       }
@@ -68,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/Graphs/Algorithm/Prims_Algorithm.md",
+                "file": "DSA_imp/Graphs/Algorithms/Kosaraju_Algo_Strongly_Connected_Component.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -78,25 +79,34 @@
                 "unlinkedCollapsed": true
               }
             }
+          },
+          {
+            "id": "b776d0f009b70d6c",
+            "type": "leaf",
+            "state": {
+              "type": "advanced-tables-toolbar",
+              "state": {}
+            }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
     "width": 300,
     "collapsed": true
   },
-  "active": "9cb89392eeb75f49",
+  "active": "d1e8efda535f0d25",
   "lastOpenFiles": [
-    "DSA_imp/Graphs/Algorithm/Prims_Algorithm.md",
-    "DSA_imp/Graphs/Algorithm/img/prims_app3.jpeg",
-    "DSA_imp/Graphs/Algorithm/img/prims_app2.jpeg",
-    "DSA_imp/Graphs/Algorithm/img/prims_app1.jpeg",
-    "DSA_imp/Graphs/Algorithm/Dijkstra_Algorithm(Shortest path in weighted undirected).md",
-    "DSA_imp/Graphs/Algorithm/Drawing 2022-07-09 14.20.39.excalidraw.md",
-    "DSA_imp/Graphs/Algorithm/img/Minimum_spanning_tree.png",
-    "WEB DEV TRICKS/HTML _CSS TIPS.md",
-    "WEB DEV TRICKS/IMPORTANT PROJECT SNIPPET.md",
-    "WEB DEV TRICKS/FONTS.md"
+    "DSA_imp/Graphs/Algorithms/img/Kosaraju_approach.png",
+    "DSA_imp/Graphs/Algorithms/Kosaraju_Algo_Strongly_Connected_Component.md",
+    "DSA_imp/Graphs/Algorithms/Drawing 2022-07-15 19.58.13.excalidraw.md",
+    "DSA_imp/Graphs/Algorithms/img/SCC2.png",
+    "DSA_imp/Graphs/Algorithms/img/SCC1.png",
+    "DSA_imp/Graphs/Algorithms/Dijkstra_Algorithm(Shortest path in weighted undirected).md",
+    "DSA_imp/Graphs/Algorithms/Kruskal_disjoint_set_unionbyrank_path_compression.md",
+    "DSA_imp/Graphs/Algorithms/Prims_Algorithm.md",
+    "DSA_imp/Graphs/Shortest_path_in_DAG.md",
+    "DSA_imp/Graphs/Algorithms/img/dijkstra_approach.png"
   ]
 }
