--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "DSA_imp/Graphs/DFS/course_schedule_II_topoSortDFS.md",
-            "mode": "source",
+            "mode": "preview",
             "source": false
           }
         }
@@ -53,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 326.0121879577637
+    "width": 326.0121879577637,
+    "collapsed": true
   },
   "right": {
     "id": "dc81a7f5dc1422e0",
